# jita

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  asset  build.rs  mise.toml  tauri.conf.json
.cargo/: config.toml
capabilities/: main.json
doc/: jita-design (2).md
gui/: main.slint  readme.md  setting.slint  test.pot
icons/: create_icon.ps1
lang/en/LC_MESSAGES/: jita.po
locales/: en.ftl
locales/GUI/: jita.pot  readme.md
locales/TUI/: readme.md  zh-CN.ftl
src/: agent.rs  app.rs  asr.rs  commands.rs  db.rs  embedding.rs  execution.rs  hotkey.rs  i18n.rs  lib.rs  llm.rs  main.rs  script.rs  settings.rs  state.rs  task_manager.rs  tray.rs  ui.rs  utils.rs
src-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-ui/settings/: settings.html
src-ui/src/: App.tsx  main.tsx
src-ui/src/components/: InputPanel.tsx  ParamForm.tsx  ScriptPreview.tsx  Settings.tsx
src-ui/src/hooks/: useTauriEvents.ts
src-ui/src/i18n/: index.ts
src-ui/src/i18n/locales/: en.json  ja.json  zh.json
src-ui/src/store/: appStore.ts
src-ui/src/styles/: index.css
src-ui/src/types/: index.ts
src/agent/: client_impl.rs  db.rs  embedding.rs  env_familiar.rs  mod.rs
src/agent/prompt/: identy.md
src/task_manager/: execution.rs  script.rs
src/ui/: asr.rs  callbacks.rs  hotkey.rs  i18n.rs  mod.rs  tray.rs
test/: test.rs
ui/: main.slint
