[package]
name = "jita"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
slint = "1.6"

# Audio / ASR
sherpa-onnx = "1.13.1"
cpal = "0.15"

# LLM
rig = "0.37.0"
rig-core = "0.37.0"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# System
keyring = { version = "3.6", features = ["windows-native", "apple-native", "linux-native"] }
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
