[package]
name = "jita"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
slint = "1.6"

# Audio / ASR
sherpa-onnx = "1.13.1"
cpal = "0.15"

# LLM
rig = "0.37.0"
rig-core = "0.37.0"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
once_cell = "1.19"

# System
keyring = { version = "3.6", features = ["windows-native", "apple-native", "linux-native"] }
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"

# Global hotkey & system tray
global-hotkey = "0.7"
tray-icon = "0.19"

# Embedding (与 rig-fastembed 保持一致版本，避免 ort 冲突)
# 使用 ort-download-binaries feature 下载预编译的 ort 二进制
fastembed = { version = "4.9", features = ["ort-download-binaries", "ort-load-dynamic"] }

# Image (for tray icon)
png = "0.17"

# i18n
fluent-bundle = "0.15"
unic-langid = "0.9"

[build-dependencies]
slint-build = "1.6"

[profile.dev]
opt-level = 0
lto = false

[dev-dependencies]
tempfile = "3.0"
