[package]
name = "jita"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jita"
path = "src/main.rs"

[lib]
name = "jita_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"

# Audio / ASR
sherpa-onnx = { version = "1.13.1", optional = true }
cpal = { version = "0.15", optional = true }

# LLM
rig = "0.37.0"
rig-core = "0.37.0"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
once_cell = "1.19"

# System
keyring = { version = "3.6", features = ["windows-native", "apple-native", "linux-native"] }
dirs = "6.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"

# Global hotkey & system tray
global-hotkey = "0.7"
tray-icon = "0.19"

# Embedding (与 rig-fastembed 保持一致版本，避免 ort 冲突)
fastembed = { version = "4.9", features = ["ort-download-binaries", "ort-load-dynamic"] }

# Image (for tray icon)
png = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# i18n
fluent = "0.17.0"
unic-langid = "0.9"

# Model download / extraction
tar = "0.4"
bzip2 = "0.4"
memvid-core = "2.0.139"

[profile.dev]
opt-level = 0
lto = false

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["asr"]
asr = ["dep:sherpa-onnx", "dep:cpal"]
